[metadata]
name = pghydro_client
version = 0.1
description = A Python package handling requests to the PgHydro Django application.
long_description = file: README.rst
url = https://www.project-grow.be/
author = Mateusz Zawadzki
author_email = zawadzkimat@outlook.com
license = MIT License
classifiers =
    Environment :: Local Environment
    Intended Audience :: Researchers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
include_package_data = true
packages = find:
install_requires =

[options.packages.find]
exclude =
    tests*
    docs*
    examples*
    